# CS127

./: .editorconfig  .gitattributes  .travis-ci  .travis.yml  CMakeLists.txt  README.md  lint.sh
0 Cpp Hello World/: CMakeLists.txt  get_hello.cpp  get_hello.hpp  main.cpp
0 Cpp Hello World/tests/: test.cpp
0 Hello World/: CMakeLists.txt  helloworld.py  testlib.py  tests.py
0 Py Hello World/: CMakeLists.txt  tests.py
00 Cpp Hello World/: CMakeLists.txt  main.cpp
00 Cpp Hello World/tests/: test.cpp
00 Py Hello World/: CMakeLists.txt  helloworld.py
00 Py Hello World/tests/: tests.py
01 Bondify-Nameify/: CMakeLists.txt  bondify.py  nameify.py
01 Bondify-Nameify/tests/: test_bondify.py  test_nameify.py
02 CodingBat/: CMakeLists.txt  cb.py
02 CodingBat/tests/: test_cb.py
03 Fizzbuzz-Piglatin/: CMakeLists.txt  fizzbuzz.py  piglatin.py
03 Fizzbuzz-Piglatin/tests/: test_fizzbuzz.py  test_piglatin.py
04 Madlibs/: CMakeLists.txt  collatz.py  comma.py  madlibs.py  picture.py
04 Madlibs/tests/: test_collatz.py  test_comma.py  test_madlibs.py  test_picture.py
05 Ciphers/: CMakeLists.txt  cypher.py  cypher_solver.py
05 Ciphers/tests/: test_cypher.py
06 Cipher Solver/: CMakeLists.txt  cypher_solver.py
07 Self-Contained Cipher Solver/: CMakeLists.txt  how_many.py  sccs.py
08 Lab/: CMakeLists.txt  apples.py  ladybug.py
09 Test and Scrabble/: CMakeLists.txt  cake.py  rle.py  rle_decode.py  scrabble.py  scrabble2.py
10 Words/: CMakeLists.txt  cppmarkov-faster.cpp  cppmarkov.cpp  wc.py  wc_speed.py
11 Markov/: CMakeLists.txt  cppmarkov.cpp  mc.py  sonnets.txt
12 Inverse Indices/: CMakeLists.txt  iindex_core.py  offender_search.py  sample_search.py
13 CppCodingBat/: CMakeLists.txt  coding_bat.cpp
14 CppTriangles/: CMakeLists.txt  piglatin.cpp  triangles.cpp
15 Final/: CMakeLists.txt  canibals.py  circle_bounds.py  presents.cpp  sum.cpp
cmake/headers/: msvc_warnings.h
cmake/include/: add_python_program.cmake  check_and_add_flag.cmake  clang_format.cmake  linter.cmake
cmake/includes/: add_python_program.cmake
project/: README.md
