cmake_minimum_required(VERSION 3.1.0) 
project(CS127 CXX)

enable_testing()

include(cmake/include/add_python_program.cmake)
include(cmake/include/clang_format.cmake)
include(cmake/include/check_and_add_flag.cmake)

set (CMAKE_CXX_STANDARD 11)
set (CXX_STANDARD_REQUIRED True)
#set (CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR}/cmake/modules)

set(BUILD_GTEST ON CACHE BOOL "BUILD GTEST")
set(BUILD_GMOCK OFF CACHE BOOL "BUILD GMOCK")

add_subdirectory("gtest")

if (${WIN32})
	check_and_add_flag(FLAG /std:c++latest)
	# Force to always compile with W4
	if(CMAKE_CXX_FLAGS MATCHES "/W[0-4]")
		string(REGEX REPLACE "/W[0-4]" "/W4" CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
	else()
		add_compile_options(/W4)
	endif()
  	check_and_add_flag(FLAG "/FI${CMAKE_SOURCE_DIR}/cmake/headers/msvc_warnings.h")
else()
	check_and_add_flag(FLAG -fdiagnostics-color=always)
	check_and_add_flag(FLAG -Wall)
	check_and_add_flag(FLAG -Wcast-align)
	check_and_add_flag(FLAG -Wcast-qual)
	check_and_add_flag(FLAG -Wconversion)
	check_and_add_flag(FLAG -Wctor-dtor-privacy)
	check_and_add_flag(FLAG -Wdisabled-optimization)
	check_and_add_flag(FLAG -Wdouble-promotion)
	check_and_add_flag(FLAG -Wduplicated-branches)
	check_and_add_flag(FLAG -Wduplicated-cond)
	check_and_add_flag(FLAG -Wextra)
	check_and_add_flag(FLAG -Wformat=2)
	check_and_add_flag(FLAG -Winit-self)
	check_and_add_flag(FLAG -Wlogical-op)
	check_and_add_flag(FLAG -Wmissing-declarations)
	check_and_add_flag(FLAG -Wmissing-include-dirs)
	check_and_add_flag(FLAG -Wno-sign-conversion)
	check_and_add_flag(FLAG -Wnoexcept)
	check_and_add_flag(FLAG -Wnull-dereference)
	check_and_add_flag(FLAG -Wold-style-cast)
	check_and_add_flag(FLAG -Woverloaded-virtual)
	check_and_add_flag(FLAG -Wpedantic)
	check_and_add_flag(FLAG -Wredundant-decls)
	check_and_add_flag(FLAG -Wrestrict)
	check_and_add_flag(FLAG -Wshadow)
	check_and_add_flag(FLAG -Wstrict-aliasing=1)
	check_and_add_flag(FLAG -Wstrict-null-sentinel)
	check_and_add_flag(FLAG -Wstrict-overflow=5)
	check_and_add_flag(FLAG -Wswitch-default)
	check_and_add_flag(FLAG -Wundef)
	check_and_add_flag(FLAG -Wno-unknown-pragmas)
	check_and_add_flag(FLAG -Wuseless-cast)
endif()

add_subdirectory("00 Py Hello World")
add_subdirectory("00 Cpp Hello World")
add_subdirectory("01 Bondify-Nameify")
add_subdirectory("02 CodingBat")
add_subdirectory("03 Fizzbuzz-Piglatin")
add_subdirectory("04 Madlibs")
add_subdirectory("05 Ciphers")
add_subdirectory("06 Cipher Solver")
add_subdirectory("07 Self-Contained Cipher Solver")
add_subdirectory("08 Lab")
add_subdirectory("09 Test and Scrabble")
add_subdirectory("10 Words")
add_subdirectory("11 Markov")
